ROS2/Code/chapt3/topic_practice_ws/log/build_2024-11-14_22-21-10/status_publisher/stderr.log
  File "/home/cat/WorkSpace/Learning/ROS2/Code/chapt3/topic_practice_ws/install/status_publisher/lib/python3.10/site-packages/status_publisher/sys_status_pub.py", line 7
    class SysStatusPub(Node)
                            ^
SyntaxError: expected ':'

